[package]
name = "fuzzypicker"
version = "0.1.0"
edition = "2021"
description = "A Rust library for fuzzy searching and interactive selection of items in command-line applications."
license = "MIT"
repository = "https://github.com/galib45/fuzzypicker"
homepage = "https://github.com/galib45/fuzzypicker"
readme = "README.md"
keywords = ["rust", "library", "fuzzy-search", "command-line", "picker"]
categories = ["development-tools", "text-processing"]

[dependencies]
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
