[package]
name = "fuzzypicker"
version = "0.1.1"
edition = "2021"
description = "A Rust library for fuzzy searching and interactive selection of items in command-line applications."
license = "MIT"
repository = "https://github.com/galib45/{name}"
homepage = "https://github.com/galib45/{name}"
documentation = "https://docs.rs/{name}/{version}/{name}"
readme = "README.md"
keywords = ["rust", "library", "fuzzy-search", "command-line", "picker"]
categories = ["development-tools", "text-processing"]

[dependencies]
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
